<resources>
    <string name="app_name">TP_2</string>
    <string name="groupNumber">Grupo 1</string>
    <string name="title">EjercicioControles</string>
    <string name="agregar_contactos">Agregar Contactos</string>
    <string name="listado_contactos">Listado de Contactos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- FORMULARIO DE CONTACTO -->
    <string name="title_contact_form">FORMULARIO DE CONTACTO</string>
    <string name="info_contact_form">Este es un formulario destinado al registro de personas, sus datos personales e intereses.</string>

    <!-- CONTACTOS -->
    <string name="title_contacts">Contactos</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_apellido">Apellido</string>
    <string name="tv_telefono">Teléfono</string>
    <string name="tv_email">Email</string>
    <string name="tv_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="tv_direccion">Dirección</string>
    <string name="btn_continuar">Continuar</string>

    <!-- MAS DATOS -->
    <string name="info_contact_form_personal_data">A continuación, por favor se pide completar más datos personales.</string>
    <string name="tv_nivelestudio">Nivel de estudios alcanzados</string>
    <string name="rb_primariaincompleto">Primaria incompleto</string>
    <string name="rb_primariacompleto">Primaria completo</string>
    <string name="rb_secundarioincompleto">Secundario incompleto</string>
    <string name="rb_secundariocompleto">Secundario completo</string>
    <string name="rb_otros">Otros</string>

    <string name="tv_intereses">Intereses</string>
    <string name="cbdeporte">Deporte</string>
    <string name="cbmusica">Musica</string>
    <string name="cbarte">Arte</string>
    <string name="cbtecnologia">Tecnología</string>

    <string name="tv_recibeinformacion">¿Desea recibir información?</string>
    <string name="switchsi">Sí</string>

    <string name="btn_guardar">Guardar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>