<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContactos">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_contact_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/title_contact_form"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/info_contact_form"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingTop="10dp"
                android:text="@string/info_contact_form" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nombre" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_apellido" />

            <EditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_telefono" />

            <LinearLayout
                android:id="@+id/llTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

                <Spinner
                    android:id="@+id/spTipoTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_fecha_nacimiento" />

            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="DD/MM/YYYY"/>

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_direccion" />

            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="AceptarClick"
                android:text="@string/btn_continuar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>